polychem/src/snapshots/polychem__polymer_chemistry__tests__parse_residues_with_invalid_composition.snap
---
source: polychem/src/polymer_chemistry.rs
description: residues
expression: out
---
  × failed to validate polymer chemistry file
  ├─▶   × polymer chemistry file contained an invalid chemical composition
  │   
  ├─▶   × expected a chemical formula (optionally followed by a '+' or '-'
  │   and a
  │     │ particle offset), or a standalone particle offset
  │      ╭────
  │    1 │ C6H14[100Tc]N2O2
  │      ·      ───┬───
  │      ·         ╰── isotope not found
  │      ╰────
  │   
  ├─▶   × expected an element (like Au) or an isotope (like [15N]) optionally
  │     │ followed by a number
  │   
  ╰─▶   × the isotope "Tc-100" could not be found in the supplied atomic
      database,
        │ though the following Technetium isotopes were found: [97, 98, 99]
        help: double-check for typos, or add a new entry to the atomic
      database
      
   ╭─[test:5:17]
 4 │ AminoAcid "K" "Lysine" {
 5 │     composition "C6H14[100Tc]N2O2"
   ·                 ─────────┬────────
   ·                          ╰── invalid chemical composition
 6 │ }
   ╰────

