polychem/src/snapshots/polychem__polymer_chemistry__tests__parse_residues_with_no_composition.snap
---
source: polychem/src/polymer_chemistry.rs
description: residues
expression: out
---
  × error parsing KDL

Error:   × child node `composition` is required
   ╭─[test:4:1]
 3 │     }
 4 │ ╭─▶ AminoAcid "K" "Lysine" {
 5 │ │       // composition "C6H14N2O2"
 6 │ ├─▶ }
   · ╰──── node starts here
   ╰────

