polychem/src/snapshots/polychem__polymer_chemistry__tests__parse_residues_with_null_composition.snap
---
source: polychem/src/polymer_chemistry.rs
expression: residues.unwrap()
---
{
  "K": ResidueDescription(
    name: "Lysine",
    composition: ChemicalComposition(
      chemical_formula: [],
      particle_offset: None,
    ),
    functional_groups: [],
  ),
}
