polychem/src/snapshots/polychem__polymer_chemistry__tests__parse_untargeted_modification.snap
---
source: polychem/src/polymer_chemistry.rs
description: modifications
expression: out
---
  × error parsing KDL

Error:   × at least one child node `targeting` is required
   ╭─[test:1:1]
 1 │ ╭─▶ Ac "O-Acetylation" {
 2 │ │       // targeting "Hydroxyl" at="6-Position" 
 3 │ │       // lost "H"
 4 │ │       // gained "C2H3O"
 5 │ ├─▶ }
   · ╰──── node starts here
   ╰────

